EM-5908 fix code smells-2